# loop_cmd

./: .gitignore  .looprc  .tool-versions  Cargo.toml  Makefile  README.md  bump_version.sh  install.sh
.github/workflows/: merge-to-main.yml  pull-request.yml
src/: args.rs  config.rs  executor.rs  lib.rs  main.rs
test_dir/: .looprc
tests/: command_integration_tests.rs  integration_tests.rs  library_integration_tests.rs
