[package]
name = "loop_cmd"
version = "0.1.16"
edition = "2021"
description = "A command-line tool for executing commands across multiple directories"
license = "MIT"
documentation = "https://github.com/mateodelnorte/loop_cmd"
homepage = "https://github.com/mateodelnorte/loop_cmd"
repository = "https://github.com/mateodelnorte/loop_cmd"

[lib]
name = "loop_lib"
path = "src/lib.rs"

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
exitcode = "1.1.2"
once_cell = "1.18.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.2"
toml = "0.5"
